[controller][h2v][router] Deprecate ExceptionType and added new enum ErrorType. Assign special ErrorType for concurrent pushes error responses. Set proper exceptionType and errorType in many Controller API responses.
RB=3443915
BUG=VENG-8656
G=voldemort-reviewers
R=zpolicze,goliu,ssen,anaberez,smaji,shuhliu,jlliu,akozma,xhao,adietz,mnhuang,yurzhou,sdwu,xnma,xyin,lcli,sumane,fvillega,lelu
A=zpolicze